{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 4470,
  "lineage": "c8911cba-3270-337f-7ac1-8ef62658d68b",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudDBSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:security-group/sg-0a04696a1e22effe3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a04696a1e22effe3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cloud-db-security-group",
            "name_prefix": "",
            "owner_id": "215325206860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWSCloud-DBSecurityGroup",
              "Project": "Demo"
            },
            "tags_all": {
              "Name": "AWSCloud-DBSecurityGroup",
              "Project": "Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloudNatGatewayEIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ca3add1e7b5f4a3",
            "domain": "vpc",
            "id": "eipalloc-03ca3add1e7b5f4a3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-237-50-174.compute-1.amazonaws.com",
            "public_ip": "34.237.50.174",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloudNatGatewayEIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae3f8fa980b218da",
            "domain": "vpc",
            "id": "eipalloc-0ae3f8fa980b218da",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-204-78-35.compute-1.amazonaws.com",
            "public_ip": "52.204.78.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:internet-gateway/igw-024104d1c3adc52de",
            "id": "igw-024104d1c3adc52de",
            "owner_id": "215325206860",
            "tags": {
              "Name": "AWSCloud-IGW"
            },
            "tags_all": {
              "Name": "AWSCloud-IGW"
            },
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloudNatGateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ca3add1e7b5f4a3",
            "association_id": "eipassoc-02d53de1a0496c447",
            "connectivity_type": "public",
            "id": "nat-0101c495226e48e74",
            "network_interface_id": "eni-07ae3b11a78f41e05",
            "private_ip": "10.0.0.45",
            "public_ip": "34.237.50.174",
            "subnet_id": "subnet-09c23eb8df500f38f",
            "tags": {
              "Name": "AWSCloud-NAtGateway1"
            },
            "tags_all": {
              "Name": "AWSCloud-NAtGateway1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.cloudNatGatewayEIP1",
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloudNatGateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae3f8fa980b218da",
            "association_id": "eipassoc-0c3f5ac4e514cacbe",
            "connectivity_type": "public",
            "id": "nat-05dac46d1c61b7227",
            "network_interface_id": "eni-04d2a4e4eac222d05",
            "private_ip": "10.0.0.35",
            "public_ip": "52.204.78.35",
            "subnet_id": "subnet-09c23eb8df500f38f",
            "tags": {
              "Name": "AWSCloud-NATGateway2"
            },
            "tags_all": {
              "Name": "AWSCloud-NATGateway2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.cloudNatGatewayEIP2",
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudPrivateRT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:route-table/rtb-0340e2d6a165304ff",
            "id": "rtb-0340e2d6a165304ff",
            "owner_id": "215325206860",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0101c495226e48e74",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AWSCloud-PrivateRT1"
            },
            "tags_all": {
              "Name": "AWSCloud-PrivateRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.cloudNatGatewayEIP1",
            "module.vpc.aws_nat_gateway.cloudNatGateway1",
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudPrivateRT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:route-table/rtb-0befed28e8536fbf8",
            "id": "rtb-0befed28e8536fbf8",
            "owner_id": "215325206860",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05dac46d1c61b7227",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AWSCloud-PrivateRT2"
            },
            "tags_all": {
              "Name": "AWSCloud-PrivateRT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.cloudNatGatewayEIP2",
            "module.vpc.aws_nat_gateway.cloudNatGateway2",
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudPublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:route-table/rtb-027bbaeb1bf4cf915",
            "id": "rtb-027bbaeb1bf4cf915",
            "owner_id": "215325206860",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024104d1c3adc52de",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AWSCloud-PublicRT"
            },
            "tags_all": {
              "Name": "AWSCloud-PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.cloudIGW",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudPrivateRTassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a29ebb2d6b2a36e",
            "route_table_id": "rtb-0340e2d6a165304ff",
            "subnet_id": "subnet-0397e40fd94c6094b"
          },
          "dependencies": [
            "module.vpc.aws_eip.cloudNatGatewayEIP1",
            "module.vpc.aws_nat_gateway.cloudNatGateway1",
            "module.vpc.aws_route_table.cloudPrivateRT1",
            "module.vpc.aws_subnet.cloudPrivateSubnet1",
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudPrivateRTassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031db6bfd948d212f",
            "route_table_id": "rtb-0befed28e8536fbf8",
            "subnet_id": "subnet-0c65a70414d4e03dd"
          },
          "dependencies": [
            "module.vpc.aws_eip.cloudNatGatewayEIP2",
            "module.vpc.aws_nat_gateway.cloudNatGateway2",
            "module.vpc.aws_route_table.cloudPrivateRT2",
            "module.vpc.aws_subnet.cloudPrivateSubnet2",
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudPublicRTassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0990a25d068a53d9a",
            "route_table_id": "rtb-027bbaeb1bf4cf915",
            "subnet_id": "subnet-09c23eb8df500f38f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.cloudIGW",
            "module.vpc.aws_route_table.cloudPublicRT",
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudPublicRTassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced02616a8088e86",
            "route_table_id": "rtb-027bbaeb1bf4cf915",
            "subnet_id": "subnet-079aff2642d50980a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.cloudIGW",
            "module.vpc.aws_route_table.cloudPublicRT",
            "module.vpc.aws_subnet.cloudPublicSubnet2",
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudPrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:subnet/subnet-0397e40fd94c6094b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0397e40fd94c6094b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215325206860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWSCloud-PrivateSubnet1"
            },
            "tags_all": {
              "Name": "AWSCloud-PrivateSubnet1"
            },
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudPrivateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:subnet/subnet-0c65a70414d4e03dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c65a70414d4e03dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215325206860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWSCloud-PrivateSubnet2"
            },
            "tags_all": {
              "Name": "AWSCloud-PrivateSubnet2"
            },
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudPublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:subnet/subnet-09c23eb8df500f38f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c23eb8df500f38f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215325206860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWSCloud-PublicSubnet1"
            },
            "tags_all": {
              "Name": "AWSCloud-PublicSubnet1"
            },
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudPublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:subnet/subnet-079aff2642d50980a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079aff2642d50980a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "215325206860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWSCloud-PublicSubnet2"
            },
            "tags_all": {
              "Name": "AWSCloud-PublicSubnet2"
            },
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Cloud-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:vpc/vpc-0ca28d7f27bd55428",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0765f0db10cf67b88",
            "default_route_table_id": "rtb-0d513d51baed0eed5",
            "default_security_group_id": "sg-0d88c6d4c006c1cb4",
            "dhcp_options_id": "dopt-0050825af4a1d38a5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca28d7f27bd55428",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d513d51baed0eed5",
            "owner_id": "215325206860",
            "tags": {
              "Name": "AWSCloud-VPC"
            },
            "tags_all": {
              "Name": "AWSCloud-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TOFFwebserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:215325206860:instance/i-0f79868e1944f38fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f79868e1944f38fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03d6e0492b6965339",
            "private_dns": "ip-10-0-0-224.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.224",
            "public_ip": "3.94.191.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:215325206860:key/57dcdd10-8321-46f0-ae14-5e0b4d6ddafe",
                "throughput": 0,
                "volume_id": "vol-0e5e664005b8e5771",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0200a37847fd74d6b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c23eb8df500f38f",
            "tags": {
              "Name": "AWSCloud-Webserver"
            },
            "tags_all": {
              "Name": "AWSCloud-Webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0200a37847fd74d6b"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_subnet.cloudPublicSubnet2",
            "module.vpc.aws_vpc.Cloud-VPC",
            "module.webserver.aws_security_group.cloudWebserverSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TOFFwebserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:215325206860:instance/i-0901442fa3a858dc3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0901442fa3a858dc3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fccd51daa11a9d45",
            "private_dns": "ip-10-0-0-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.60",
            "public_ip": "34.201.147.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:215325206860:key/57dcdd10-8321-46f0-ae14-5e0b4d6ddafe",
                "throughput": 0,
                "volume_id": "vol-093c27bef5d62b201",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0200a37847fd74d6b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c23eb8df500f38f",
            "tags": {
              "Name": "AWSCloud-Webserver"
            },
            "tags_all": {
              "Name": "AWSCloud-Webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0200a37847fd74d6b"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_subnet.cloudPublicSubnet2",
            "module.vpc.aws_vpc.Cloud-VPC",
            "module.webserver.aws_security_group.cloudWebserverSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb",
      "name": "cloudLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:215325206860:loadbalancer/app/web-app-lb/47ee23842ff65fb3",
            "arn_suffix": "app/web-app-lb/47ee23842ff65fb3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-app-lb-1263909696.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:215325206860:loadbalancer/app/web-app-lb/47ee23842ff65fb3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0200a37847fd74d6b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-079aff2642d50980a"
              },
              {
                "subnet_id": "subnet-09c23eb8df500f38f"
              }
            ],
            "subnets": [
              "subnet-079aff2642d50980a",
              "subnet-09c23eb8df500f38f"
            ],
            "tags": {
              "Name": "AWSCloud-LoadBalancer",
              "Project": "Demo"
            },
            "tags_all": {
              "Name": "AWSCloud-LoadBalancer",
              "Project": "Demo"
            },
            "vpc_id": "vpc-0ca28d7f27bd55428",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_subnet.cloudPublicSubnet2",
            "module.vpc.aws_vpc.Cloud-VPC",
            "module.webserver.aws_security_group.cloudWebserverSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cloudLbListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:215325206860:listener/app/web-app-lb/47ee23842ff65fb3/7499e0b7504398e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:215325206860:targetgroup/AWSCloud-TargetGroup/5c35b998be00313e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:215325206860:listener/app/web-app-lb/47ee23842ff65fb3/7499e0b7504398e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:215325206860:loadbalancer/app/web-app-lb/47ee23842ff65fb3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_subnet.cloudPublicSubnet2",
            "module.vpc.aws_vpc.Cloud-VPC",
            "module.webserver.aws_lb.cloudLoadBalancer",
            "module.webserver.aws_lb_target_group.cloudTargetGroup",
            "module.webserver.aws_security_group.cloudWebserverSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cloudTargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:215325206860:targetgroup/AWSCloud-TargetGroup/5c35b998be00313e",
            "arn_suffix": "targetgroup/AWSCloud-TargetGroup/5c35b998be00313e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:215325206860:targetgroup/AWSCloud-TargetGroup/5c35b998be00313e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "AWSCloud-TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "AWSCloud-TargetGroup",
              "Project": "Demo"
            },
            "tags_all": {
              "Name": "AWSCloud-TargetGroup",
              "Project": "Demo"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TOFFwebserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:215325206860:targetgroup/AWSCloud-TargetGroup/5c35b998be00313e-20231117081100388300000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:215325206860:targetgroup/AWSCloud-TargetGroup/5c35b998be00313e",
            "target_id": "i-0f79868e1944f38fc"
          },
          "dependencies": [
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_subnet.cloudPublicSubnet2",
            "module.vpc.aws_vpc.Cloud-VPC",
            "module.webserver.aws_instance.TOFFwebserver1",
            "module.webserver.aws_lb_target_group.cloudTargetGroup",
            "module.webserver.aws_security_group.cloudWebserverSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TOFFwebserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:215325206860:targetgroup/AWSCloud-TargetGroup/5c35b998be00313e-20231117081050467200000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:215325206860:targetgroup/AWSCloud-TargetGroup/5c35b998be00313e",
            "target_id": "i-0901442fa3a858dc3"
          },
          "dependencies": [
            "module.vpc.aws_subnet.cloudPublicSubnet1",
            "module.vpc.aws_subnet.cloudPublicSubnet2",
            "module.vpc.aws_vpc.Cloud-VPC",
            "module.webserver.aws_instance.TOFFwebserver2",
            "module.webserver.aws_lb_target_group.cloudTargetGroup",
            "module.webserver.aws_security_group.cloudWebserverSecurityGroup"
          ]
        }
      ]
    },
    {
      "module": "module.webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudWebserverSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215325206860:security-group/sg-0200a37847fd74d6b",
            "description": "Allow ssh http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0200a37847fd74d6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_hhtp",
            "name_prefix": "",
            "owner_id": "215325206860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWSCloud-WebserverSecurityGroup",
              "Project": "Demo"
            },
            "tags_all": {
              "Name": "AWSCloud-WebserverSecurityGroup",
              "Project": "Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca28d7f27bd55428"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Cloud-VPC"
          ]
        }
      ]
    }
  ]
}